examples/test/testpolicy7560.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7560
  namespace: namespace208
spec:
  podSelector:
    matchLabels:
      key31: value46
      key36: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value33
          key24: value25
          key26: value15
      podSelector:
        matchLabels:
          key6: value14
